--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="row">
                 <div class="col-md-9 card border-0 shadow" id="question-container">
                    <div id="question" class="alert alert-secondary show"></div>
-                   <div class="alert alert-secondary show"><ul id="options"></ul></div>
+                   <div class="alert alert-secondary show"><ol type="i" id="options"></0l></div>
                 </div>
 
                 <div class="col-md-3">
