saving timmer in localstorage

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="col-md-3">
                    <div id="questions-indexing">
                    </div>
-                   <div class="timmer">Time Left: <span id="timmer"></span></div>
+                   <div class="timmer"><i class="fa fa-clock-o"> Time Left: </i><span id="timmer"></span></div>
                 <div>
               </div>
             </div>
